# wt-is-this

./: .gitignore  CMakeLists.txt  README.md
examples/: hello_world.wt  loop_example.wt
src/: Lexer.cpp  Lexer.h  Parser.cpp  main.cpp
